// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterListItem adds activeClassName={SELECTED_CLASS} when it gets a "to" prop 1`] = `
<a
  activeClassName="selected"
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="filter-item filter-item emotion-0"
  tag={[MockFunction]}
  to="#"
/>
`;

exports[`FilterListItem renders the given "tag" prop 1`] = `
<a
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="filter-item filter-item emotion-0"
  tag={[Function]}
/>
`;

exports[`FilterListItem respects the "selected" prop 1`] = `
<a
  blacklist={
    Array [
      "css",
      "color",
      "bg",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="filter-item filter-item selected emotion-0"
/>
`;
